Check for task_id and show CSV button. Add in jquery to handle the request to the application

--- a/anchor/templates/_host_breakdown.html
+++ b/anchor/templates/_host_breakdown.html
@@ -4,6 +4,9 @@
     {%- if mismatch %}
         <button class="btn btn-info show-all" title="Show All Servers">Show All Servers</button>
     {% endif -%}
+    {%- if task_id %}
+        <button class="btn btn-primary download-csv" data-task="{{ task_id }}" title="Download CSV">Download CSV</button>
+    {% endif -%}
 </h2>
 {%- if data.get('servers') and data.get('servers')|length > 0 %}
     {%- if mismatch %}
@@ -74,5 +77,10 @@
         } else {
             change_button_text('show-all', 'Show All Servers', 'info', 'warning');
         }
+    });
+
+    $('.download-csv').click(function() {
+        var task_id = $('.download-csv').data('task');
+        window.location = '/lookup/servers/' + task_id + '/csv';
     });
 </script>
