Rework tests and cleanup some things

--- a/anchor/templates/reports/reports.html
+++ b/anchor/templates/reports/reports.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% block title %}Reports{% endblock %}
+{% block title %} - Reports{% endblock %}
 {% block addHeaders %}
 <style>
     .account-counts {
